--- a/AI GEF C1 Assignment 1/assignment.ipynb
+++ b/AI GEF C1 Assignment 1/assignment.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "id": "99b1303f",
    "metadata": {},
    "outputs": [
@@ -25,6 +25,8 @@
     }
    ],
    "source": [
+    "# Function to identify the day when max temperature recorded for each city. Return as a dict (city - temp pair)\n",
+    "\n",
     "from pandas import DataFrame\n",
     "\n",
     "df = pd.read_csv(\"city_temperature.csv\")\n",
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "c8a0fb4e",
    "metadata": {},
    "outputs": [
@@ -57,6 +59,8 @@
     }
    ],
    "source": [
+    "# Function to identify the monthly average temperature for each of the city. Return dict.\n",
+    "\n",
     "from pandas import DataFrame\n",
     "\n",
     "df = pd.read_csv(\"city_temperature.csv\")\n",
@@ -75,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "id": "17466b53",
    "metadata": {},
    "outputs": [
@@ -88,6 +92,10 @@
     }
    ],
    "source": [
+    "# Consider the timeline into 5 days of sliding window. Identify for each city : the number of 5 day stretch(s) \n",
+    "# where temperature stayed more than that of monthly average. \n",
+    "\n",
+    "\n",
     "from pandas import DataFrame\n",
     "\n",
     "df = pd.read_csv(\"city_temperature.csv\")\n",
@@ -122,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "id": "c3495b74",
    "metadata": {},
    "outputs": [
@@ -136,6 +144,11 @@
     }
    ],
    "source": [
+    "# Function that reads the CSV file and returns subject wise topper(s) and overall topper(s), such that:\n",
+    "# Toppers shall have at least 60% attendance\n",
+    "# Toppers shall have the project submitted.\n",
+    "\n",
+    "\n",
     "from pandas import DataFrame\n",
     "\n",
     "df = pd.read_csv(\"student_scores.csv\")\n",
@@ -166,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "5dcd53be",
    "metadata": {},
    "outputs": [
@@ -205,6 +218,15 @@
     }
    ],
    "source": [
+    "# A function that returns a data frame with the following columns added along with original data:\n",
+    "# ‘Average Score’ : For each student\n",
+    "# ‘Grade’ :  based on average score (A : >= 90; B : 75 .. 89.99; C : 60 .. 74.99; D : <60)\n",
+    "# ‘Performance’ : \n",
+    "# ‘Excellent’ : Grade A and attendance > 90%, project submitted\n",
+    "# ‘Needs Attention’ : Grade D OR project not submitted OR attendance < 60%\n",
+    "# ‘Satisfactory’ : All others\n",
+    "\n",
+    "\n",
     "from pandas import DataFrame\n",
     "df = pd.read_csv(\"student_scores.csv\")\n",
     "\n",
@@ -238,11 +260,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "id": "e5d7fc05",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# A function that exports the summary statistics of the subject wise marks, attendance to a CSV file.\n",
+    "\n",
     "from pandas import DataFrame\n",
     "df = pd.read_csv(\"student_scores.csv\")\n",
     "\n",
