converted code from pandas to numpy

--- a/AI GEF C1 Assignment 1/assignment.ipynb
+++ b/AI GEF C1 Assignment 1/assignment.ipynb
@@ -7,7 +7,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import csv"
    ]
   },
   {
@@ -19,18 +21,25 @@
    "source": [
     "# Function to identify the day when max temperature recorded for each city. Return as a dict (city - temp pair)\n",
     "\n",
-    "from pandas import DataFrame\n",
+    "from datetime import datetime\n",
     "\n",
-    "df = pd.read_csv(\"city_temperature.csv\")\n",
-    "\n",
-    "def MaxTemp(df:DataFrame):\n",
+    "def MaxTemp():\n",
+    "    \n",
+    "    with open('city_temperature.csv', 'r') as f:\n",
+    "        reader = csv.reader(f, delimiter=',')\n",
+    "        header = next(reader)\n",
+    "        data = list(reader)\n",
+    "        data_array = np.array(data)\n",
     "    dict = {}\n",
-    "    for city in df.columns.drop(\"Date\"):\n",
-    "        filter = df.loc[df[city].idxmax(), ['Date']]\n",
-    "        dict[city] = filter[\"Date\"]\n",
+    "    for index,h in enumerate(header):\n",
+    "        if(h != \"Date\"):\n",
+    "            columns = data_array[:, index].astype(float)\n",
+    "            max_index = np.argmax(columns)\n",
+    "            date = data_array[max_index,0]\n",
+    "            dict[h] = str(date)\n",
     "    return dict\n",
-    "\n",
-    "print(MaxTemp(df))\n",
+    "        \n",
+    "print(MaxTemp())\n",
     "\n",
     "    \n",
     "    \n"
@@ -44,20 +53,44 @@
    "outputs": [],
    "source": [
     "# Function to identify the monthly average temperature for each of the city. Return dict.\n",
+    "def MeanTempMonthWise():\n",
+    "    with open('city_temperature.csv', 'r') as f:\n",
+    "            reader = csv.reader(f, delimiter=',')\n",
+    "            data = list(reader)\n",
+    "            data_array = np.array(data)\n",
     "\n",
-    "from pandas import DataFrame\n",
+    "    date_column = data_array[:,0]\n",
+    "    month_names = []\n",
+    "    for index, d in enumerate(date_column):\n",
+    "        if(index == 0):\n",
+    "            month_names.append(\"Date\")\n",
+    "        else:\n",
+    "            month_names.append(datetime.strptime(d.strip(), '%d-%m-%Y').strftime('%B'))\n",
     "\n",
-    "df = pd.read_csv(\"city_temperature.csv\")\n",
-    "df['Month'] = pd.to_datetime(df['Date'], dayfirst=True).dt.month_name(locale='English')\n",
-    "\n",
-    "def MeanTempMonthWise(df:DataFrame):\n",
+    "    data_array[:,0] = month_names\n",
+    "    #print(data_array)\n",
+    "    headers = data_array[0:1].flatten()\n",
+    "    rows = data_array[1:]\n",
+    "    unique_month = np.unique(rows[:,0])\n",
+    "    # print(headers)\n",
+    "    # print(unique_month)\n",
     "    dict = {}\n",
-    "    for city in df.columns.drop(\"Date\").drop(\"Month\"):\n",
-    "        filter = df.groupby(\"Month\")[city].mean().to_dict()\n",
-    "        dict[city] = filter\n",
+    "    for month in unique_month:\n",
+    "        month_rows = rows[rows[:,0] == month]\n",
+    "        numeric_values = month_rows[:,1].astype(float)\n",
+    "        for index, column in enumerate(headers):\n",
+    "            if(column != 'Date'):\n",
+    "                numeric_values = month_rows[:,index].astype(float)\n",
+    "                max_value = np.mean(numeric_values)\n",
+    "                if dict.get(str(column)) is not None:\n",
+    "                    value = dict[column]\n",
+    "                    value[str(month)] = float(max_value)\n",
+    "                    dict[column] = value\n",
+    "                else:\n",
+    "                    dict[str(column)] = {str(month): float(max_value)}\n",
     "    return dict\n",
     "\n",
-    "print(MeanTempMonthWise(df))\n",
+    "print(MeanTempMonthWise())\n",
     "\n"
    ]
   },
